# BinaryLens

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README_pt-BR.md
BinaryLens/: BinaryLens.exe.manifest  BinaryLens.rc  BinaryLens.vcxproj  BinaryLens.vcxproj.filters
BinaryLens/asm/: BUILD_ASM_NOTES.txt  byte_profile_x64.asm  code_surface_x64.asm  cpu_runtime_x64.asm  entrypoint_profile_x64.asm  opcode_family_x64.asm  pattern_scan_x64.asm  token_prefilter_x64.asm
BinaryLens/cmake/: asm_target_sources_snippet.cmake
BinaryLens/config/: config.example.json
BinaryLens/include/analyzers/: archive_analyzer.h  embedded_payload_analyzer.h  import_analyzer.h  indicator_extractor.h  pe_analyzer.h  script_abuse_analyzer.h  url_analyzer.h
BinaryLens/include/asm/: asm_bridge.h
BinaryLens/include/common/: runtime_paths.h  string_utils.h
BinaryLens/include/core/: advanced_analysis.h  analysis_cache.h  analysis_control.h  analysis_engine.h  behavior_simulator.h  confidence_engine.h  deobfuscation_engine.h  evasion_engine.h  evidence_calibrator.h  ioc_intelligence.h  low_level_semantics.h  memory_scanner.h  mitre_mapper.h  ml_classifier.h  plugin_engine.h  risk_engine.h  task_scheduler.h  verdict_engine.h  yara_engine.h
BinaryLens/include/scanners/: file_scanner.h  file_type_resolver.h  url_scanner.h
BinaryLens/include/services/: api_client.h  signature_checker.h
BinaryLens/plugins/: lolbin_pack.blp
BinaryLens/rules/: cobalt_strike.yar  deobfuscation.yar  dll_sideloading.yar  dotnet_reflection.yar  loader.yar  lolbins.yar  office_macro_abuse.yar  process_injection.yar  ransomware.yar  stealer.yar
BinaryLens/src/analyzers/: archive_analyzer.cpp  embedded_payload_analyzer.cpp  import_analyzer.cpp  indicator_extractor.cpp  pe_analyzer.cpp  script_abuse_analyzer.cpp  url_analyzer.cpp
BinaryLens/src/asm/: asm_bridge.cpp
BinaryLens/src/core/: analysis_cache.cpp  analysis_control.cpp  analysis_engine.cpp  behavior_simulator.cpp  confidence_engine.cpp  deobfuscation_engine.cpp  evasion_engine.cpp  evidence_calibrator.cpp  ioc_intelligence.cpp  low_level_semantics.cpp  memory_scanner.cpp  mitre_mapper.cpp  ml_classifier.cpp  plugin_engine.cpp  risk_engine.cpp  verdict_engine.cpp  yara_engine.cpp
BinaryLens/src/scanners/: file_scanner.cpp  file_type_resolver.cpp  url_scanner.cpp
BinaryLens/src/services/: api_client.cpp  signature_checker.cpp
BinaryLens/src/ui/: main.cpp
qt_app/include/: analysis_worker.h  app_version.h  main_window.h  update_checker.h  update_dialog.h
qt_app/resources/: binarylens.rc  binarylens_resources.qrc
qt_app/src/: analysis_worker.cpp  main.cpp  main_window.cpp  update_checker.cpp  update_dialog.cpp
qt_app/updater/: updater_main.cpp
release_support/: BinaryLens.iss  RELEASE_NOTES.txt  make_portable_release.bat
